revise menulist overflow bug

--- a/src/styles/scss/contentBody.scss
+++ b/src/styles/scss/contentBody.scss
@@ -13,8 +13,7 @@
   .main-content{
     grid-column: 2 / 5;
     height: 100%;
+    overflow: auto;
   }
-
-
 
 }
