--- a/src/styles/scss/menuList.scss
+++ b/src/styles/scss/menuList.scss
@@ -1,5 +1,5 @@
 .menu-list{
-  height: calc(100% - 50px);
+  height: 100%;
   overflow: auto;
 
   // 清單模式
